Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "angular-service"
  namespace: "angular-game"
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app: "angular"
