ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "angular-ingress"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
  labels:
    app: angular
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: "angular-service"
              servicePort: 80
